[gd_scene load_steps=2 format=3 uid="uid://cefjslefqebca"]

[ext_resource type="Script" path="res://fotball_lyd_kontrol.gd" id="1_110xd"]

[node name="Control" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_110xd")

[node name="audio" type="AudioStreamPlayer" parent="."]
unique_name_in_owner = true

[node name="FileDialog" type="FileDialog" parent="."]
unique_name_in_owner = true
title = "Open a Directory"
size = Vector2i(606, 162)
ok_button_text = "Select Current Folder"
file_mode = 2
access = 2

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 4

[node name="getSound" type="Button" parent="VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 4
text = "Trykk her for å laste inn snutter"

[node name="StopSound" type="Button" parent="VBoxContainer/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 8
size_flags_vertical = 4
text = "Stopp lyden"

[node name="VSeparator" type="VSeparator" parent="VBoxContainer/HBoxContainer"]
layout_mode = 2

[node name="audioinfo" type="HBoxContainer" parent="VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
alignment = 2

[node name="audioname" type="Label" parent="VBoxContainer/HBoxContainer/audioinfo"]
unique_name_in_owner = true
layout_mode = 2
theme_override_colors/font_color = Color(0.498039, 0.498039, 0.498039, 1)
text = "INGEN LYD SPILLES"

[node name="VSeparator" type="VSeparator" parent="VBoxContainer/HBoxContainer/audioinfo"]
layout_mode = 2

[node name="audiotime" type="Label" parent="VBoxContainer/HBoxContainer/audioinfo"]
unique_name_in_owner = true
layout_mode = 2
theme_override_colors/font_color = Color(0.498039, 0.498039, 0.498039, 1)
text = "00:00"

[node name="seperator" type="Label" parent="VBoxContainer/HBoxContainer/audioinfo"]
layout_mode = 2
text = " / "

[node name="audiolength" type="Label" parent="VBoxContainer/HBoxContainer/audioinfo"]
unique_name_in_owner = true
layout_mode = 2
theme_override_colors/font_color = Color(0.498039, 0.498039, 0.498039, 1)
text = "00.00"

[node name="HSeparator" type="HSeparator" parent="VBoxContainer"]
layout_mode = 2

[node name="ScrollContainer" type="ScrollContainer" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
vertical_scroll_mode = 0

[node name="Tabs" type="TabContainer" parent="VBoxContainer/ScrollContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
tabs_visible = false

[node name="snuttcontainer" type="HBoxContainer" parent="VBoxContainer/ScrollContainer/Tabs"]
layout_mode = 2

[node name="Plistbuilder" type="HBoxContainer" parent="VBoxContainer/ScrollContainer/Tabs/snuttcontainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 2

[node name="VBoxContainer" type="VBoxContainer" parent="VBoxContainer/ScrollContainer/Tabs/snuttcontainer/Plistbuilder"]
layout_mode = 2

[node name="Label" type="Label" parent="VBoxContainer/ScrollContainer/Tabs/snuttcontainer/Plistbuilder/VBoxContainer"]
layout_mode = 2
text = "Spilleliste-bygger
Trykk på en sang for å legge til."

[node name="navnboks" type="HBoxContainer" parent="VBoxContainer/ScrollContainer/Tabs/snuttcontainer/Plistbuilder/VBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="VBoxContainer/ScrollContainer/Tabs/snuttcontainer/Plistbuilder/VBoxContainer/navnboks"]
layout_mode = 2
text = "Navn: "

[node name="LineEdit" type="LineEdit" parent="VBoxContainer/ScrollContainer/Tabs/snuttcontainer/Plistbuilder/VBoxContainer/navnboks"]
layout_mode = 2
size_flags_horizontal = 3
placeholder_text = "Min Spilleliste"

[node name="Button" type="Button" parent="VBoxContainer/ScrollContainer/Tabs/snuttcontainer/Plistbuilder/VBoxContainer"]
layout_mode = 2
text = "Lagre spilleliste"

[node name="HSeparator" type="HSeparator" parent="VBoxContainer/ScrollContainer/Tabs/snuttcontainer/Plistbuilder/VBoxContainer"]
layout_mode = 2

[node name="ScrollContainer" type="ScrollContainer" parent="VBoxContainer/ScrollContainer/Tabs/snuttcontainer/Plistbuilder/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
horizontal_scroll_mode = 0
vertical_scroll_mode = 2

[node name="Plistentryeditors" type="VBoxContainer" parent="VBoxContainer/ScrollContainer/Tabs/snuttcontainer/Plistbuilder/VBoxContainer/ScrollContainer"]
unique_name_in_owner = true
layout_mode = 2

[node name="VSeparator" type="VSeparator" parent="VBoxContainer/ScrollContainer/Tabs/snuttcontainer/Plistbuilder"]
layout_mode = 2
size_flags_horizontal = 3

[node name="snutter" type="VFlowContainer" parent="VBoxContainer/ScrollContainer/Tabs/snuttcontainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_vertical = 3

[connection signal="dir_selected" from="FileDialog" to="." method="_on_file_dialog_dir_selected"]
[connection signal="pressed" from="VBoxContainer/HBoxContainer/getSound" to="." method="_on_get_sound_pressed"]
[connection signal="pressed" from="VBoxContainer/HBoxContainer/StopSound" to="." method="_on_stop_sound_pressed"]
